fix(ffe-cards): spesifiserer text-align på card action

--- a/packages/ffe-cards/less/common-card-styling.less
+++ b/packages/ffe-cards/less/common-card-styling.less
@@ -50,7 +50,7 @@
     }
     &:focus,
     &:active,
-    &:focus-within{
+    &:focus-within {
         border-color: var(--ffe-color-border-interactive-focus);
         box-shadow: var(--ffe-g-border-focus-box-shadow)
             var(--ffe-color-border-interactive-focus);
@@ -74,6 +74,7 @@
         font: inherit;
         cursor: pointer;
         outline: inherit;
+        text-align: left;
     }
 
     a.ffe-card__action--raw {
